Fixed invoice and payment receipt layout issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6700,7 +6700,7 @@ ul.permission-list.client-permissions-list{
 .currency-select span.caret{
   left: 30px;
 }
-.company_resize_logo img{
+.company_resize_logo img, .receipt-logo img{
   height: 100px;
 }
 #client_province_state{
